--- a/pom.xml
+++ b/pom.xml
@@ -28,5 +28,10 @@
   		<version>2.0</version>
   		<scope>provided</scope>
   	</dependency>
+  	<dependency>
+  		<groupId>org.apache.tomcat</groupId>
+  		<artifactId>tomcat-jdbc</artifactId>
+  		<version>9.0.0.M15</version>
+  	</dependency>
   </dependencies>
 </project>
