--- a/pom.xml
+++ b/pom.xml
@@ -9,17 +9,6 @@
     <url>http://maven.apache.org</url>
     <dependencies>
         <dependency>
-            <groupId>javax.servlet</groupId>
-            <artifactId>jsp-api</artifactId>
-            <version>2.0</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.tomcat</groupId>
-            <artifactId>tomcat-jdbc</artifactId>
-            <version>9.0.0.M15</version>
-        </dependency>
-        <dependency>
         	<groupId>javax.servlet</groupId>
         	<artifactId>jstl</artifactId>
         	<version>1.2</version>
@@ -29,6 +18,21 @@
         	<artifactId>javax.servlet-api</artifactId>
         	<version>4.0.0</version>
         	<scope>provided</scope>
+        </dependency>
+        <dependency>
+        	<groupId>org.apache.tomcat</groupId>
+        	<artifactId>tomcat-jdbc</artifactId>
+        	<version>9.0.0.M15</version>
+        </dependency>
+        <dependency>
+        	<groupId>javax.servlet.jsp</groupId>
+        	<artifactId>jsp-api</artifactId>
+        	<version>2.2</version>
+        </dependency>
+        <dependency>
+        	<groupId>mysql</groupId>
+        	<artifactId>mysql-connector-java</artifactId>
+        	<version>5.1.34</version>
         </dependency>
     </dependencies>
     <build>
